Fixed college info overflow issue

--- a/css/style.scss
+++ b/css/style.scss
@@ -152,25 +152,25 @@ footer {
 	margin-top: 60px;
 
 	.top {
-		height: 250px;
-
+		
 		.container-fluid {
 			background-color: rgba(0, 0, 0, 0.5);
-			height: 250px;
+			height: 100%;
 
 			.content1 {
-				padding-top: 30px;
-				padding-left: 25px;
+				display: flex;
+				flex-wrap: wrap;
 
 				img {
 					width: 100px;
 					height: 100px;
 					border-radius: 100%;
+					margin: 20px 40px 20px 10px;
 				}
 
 				.content2 {
-					float: right;
-					padding-right: 125px;
+					max-width: 700px;
+					margin: 20px 0;
 				}
 			}
 		}
